--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <img src="img/logo.png" alt="Logo">
+        <img src="img/logo.png" alt="Inholland Solar Logo">
         <h1>
-            Inholand Solar Energy
+            Inholland Solar Energy
         </h1>
         <h2>
             Make the world a better place
@@ -38,7 +38,8 @@
                 <article id="article-1">
                     <h3>Victron SmartSolar MPPT 100-50 12V 24V charge controller</h3>
                     <section class="article-content">
-                        <a href=": http://www.ikwilzonneenergie.nl/Victron-SmartSolar-MPPT-100-50-12V-24V"><img
+                        <a target="_blank"
+                            href="http://www.ikwilzonneenergie.nl/Victron-SmartSolar-MPPT-100-50-12V-24V"><img
                                 src="img/SmartSolar-MPPT-10030.png" alt="Product 2" class="article-image"></a>
                         <p>
                             A solar charger gathers energy from your solar panels, and stores it in your batteries.
@@ -48,7 +49,7 @@
                             The SmartSolar charge controller will even recharge a severely depleted battery.
                             It can operate with a battery voltage as low as 0 Volts, provided the cells are not
                             permanently sulphated or otherwise damaged.
-                            <a
+                            <a target="_blank"
                                 href="https://www.victronenergy.com/solar-charge-controllers/smartsolar-100-30-100-50#pd-nav-image">Read
                                 more here</a>
                         </p>
@@ -59,7 +60,7 @@
                 <article id="article-2">
                     <h3>SMA SB3.6 Solar panels inverter 1 phase</h3>
                     <section class="article-content">
-                        <a href="http://www.ikwilzonneenergie.nl/SMA-Sunny-Boy-SB36-omvormer"><img
+                        <a target="_blank" href="http://www.ikwilzonneenergie.nl/SMA-Sunny-Boy-SB36-omvormer"><img
                                 src="img/sunny-boy-30-36-40-50-60.jpg" alt="Product 2" class="article-image"> </a>
                         <p>
                             Established product features and integrated software solutions will provide yield
@@ -68,7 +69,8 @@
                             in nearly every situation.
                             SMA Smart Connected inverter monitoring offers enhanced safety by detecting errors at an
                             early stage and automatically reporting them to the installer.
-                            <a href="http://www.ikwilzonneenergie.nl/SMA-Sunny-Boy-SB36-omvormer">Read more here</a>
+                            <a target="_blank" href="https://www.sma.de/en/products/solarinverters/sunny-boy-30-36-40-50-60.html">Read
+                                more here</a>
                         </p>
                     </section>
                 </article>
@@ -77,9 +79,10 @@
                     <h3>Victron 175Wp 12Volt Solar panel set</h3>
                     <section class="article-content">
 
-                        <a
+                        <a target="_blank"
                             href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22"><img
-                                src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Product 3" class="article-image"></a>
+                                src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Product 3"
+                                class="article-image"></a>
 
                         <p>
                             Solar charge controllers Steca Solarix 2525 and 4040 are newly developed products based on
@@ -94,7 +97,8 @@
                             The state of charge is represented visually as a level meter. Data such as voltage, current
                             and state of charge can also be displayed digitally as figures on the display.
                             In addition, the controller has an energy meter which can be reset by the user.
-                            <a href="https://www.steca.com/index.php?Steca-Solarix-en">Read more here</a>
+                            <a target="_blank" href="https://www.steca.com/index.php?Steca-Solarix-en">Read more
+                                here</a>
                         </p>
                     </section>
                 </article>
@@ -103,11 +107,38 @@
             <aside class="aside-home">
                 <h4>5 Reasons to Use Solar Power</h4>
                 <ol>
-                    <li>good</li>
-                    <li>cheap</li>
-                    <li>green</li>
-                    <li>Reusable resource</li>
-                    <li>save money</li>
+                    <li><span class="aside-title">Solar Power Is Good for the Environment</span>
+                        Solar power is self-sufficient and installing solar panels on your roof is a safe and easy path
+                        to contribute
+                        to a sustainable future.
+                        Starting on your home is a great way to show you care about the environment.
+                    </li>
+
+                    <li><span class="aside-title">Solar Electricity Makes Your Home Go Off-the-Grid</span>
+                        Solar electricity boosts your electricity independence! By investing in a 4kW solar system,
+                        which is the most common domestic size, you can easily protect yourself against unpredictable
+                        increases in utility prices, and enjoy cheap electricity throughout the entire day - the sun
+                        will never increase its rates and it gives you energy security.
+                    </li>
+
+                    <li><span class="aside-title">Solar Power Can Use Underutilised Land</span>
+                        You might have heard of solar farms - panels used to harvest solar energy in large numbers. This
+                        highlights perfectly how solar power makes use of underutilised land. For instance, a 45 acre
+                        solar farm has been recently built in the UK, and it’s able to power 2,500 homes.
+                    </li>
+                    <li><span class="aside-title">Solar Power Causes Less Electricity Loss</span>
+                        Rooftop solar power is helpful in increasing electricity efficiency, considering the short
+                        distance. Your energy becomes domestic and as a result you’re in control of your own bills and
+                        energy usage. Furthermore, solar power systems are durable, thus chances of service interruption
+                        are reduced.
+                    </li>
+
+                    <li><span class="aside-title">Solar Power Is A Free Source of Energy</span>
+                        When there are many of us switching to solar power, we are less likely to experience blackouts
+                        or brownouts. Every household in the UK that have solar cells installed, functions as a small
+                        power plant. This, in turn, provides us with a greater electricity grid security, especially in
+                        terms of natural or human-caused disasters.
+                    </li>
                 </ol>
             </aside>
         </section>
