--- a/howsolarworks.html
+++ b/howsolarworks.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <img src="img/logo.jpg" alt="">
+        <img src="img/logo.png" alt="Inholland Solar Logo">
         <h1>
-            Inholand Solar Energy
+            Inholland Solar Energy
         </h1>
         <h2>
             Make the world a better place
